@@ -1,3 +1,9 @@
+2008-10-20 [michael]	0.6.2cvs4
+
+	* src/libarchive_archive.c
+        Fix bug where claws-mail crashes if incorrect date
+        is entered.
+
 2008-10-19 [michael]	0.6.2cvs3
 
 	* src/archiver_gtk.c
